Fix HTML entity encoding in index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
   <div class="editor" id="editor">
     <img id="userImage" />
-    <img id="frameImage" src="avtt.png" alt="Frame" />
+    <img id="frameImage" src="avt.png" alt="Frame" />
   </div>
 
   <div class="controls">
@@ -176,3 +176,4 @@
   </script>
 </body>
 </html>
+
